welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: value GetMondeHauteur
	var H = GetMondeHauteur()
                ^Array1:8: error: not found: value GetCouleurSol
		T (pas) = GetCouleurSol()
                          ^